--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sooner": "^1.1.4",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0"
   },
